--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,13 +11,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/recharts": "^1.8.10",
+    "apexcharts": "^3.19.0",
     "compare-dates": "^2.0.0",
     "csvtojson": "^2.0.10",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
+    "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "recharts": "^1.8.5",
     "typescript": "~3.7.2"
   },
   "resolutions": {
