--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "update-data": "node ./scripts/update-data.js"
   },
   "eslintConfig": {
     "extends": "react-app"
