--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covid-by-state",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://n8d.io/covid-by-state",
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@reduxjs/toolkit": "^1.3.5",
