--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build; cp -R build docs",
+    "build": "rm -rf docs && react-scripts build; cp -R build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "update-data": "node ./scripts/update-data.js"
