--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ name: Node.js CI
 on:
   push:
     branches: [ master ]
+  schedule:
+    - cron: '0 8,12,16,20 * * *'
 
 jobs:
   build:
@@ -19,11 +21,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Build
+    - name: Setup build
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: |
+    - name: Build
+      run: |
         yarn
         yarn build
         rm -rf docs
