make sure to update data

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Build
       run: |
         yarn
+        yarn update-data
         yarn build
         rm -rf docs
         cp -R build docs
